# sort-visualizer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  Makefile  README.md  SFMLConfig.cmake  allegro.cpp  apvector.h  build.sh  conanfile.txt  data.cpp  data.h  functions.cpp  graphicalSorting.cpp  graphicalSorting.h  hitbox.cpp  main.cpp
include/: sorting_algorithms.h  ui.h  visualization.h
src/: main.cpp  sorting_algorithms.cpp  ui.cpp  visualization.cpp
